--- a/goEmotions.ipynb
+++ b/goEmotions.ipynb
@@ -1711,8 +1711,8 @@
       "cell_type": "code",
       "source": [
         "# model = model.module\n",
-        "# model.push_to_hub(\"MattViana/GoBerta\", use_auth_token=\"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\")\n",
-        "# tokenizer.push_to_hub(\"MattViana/GoBerta\", use_auth_token=\"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\")"
+        "# model.push_to_hub(\"MattViana/GoBerta\", use_auth_token=\" ----- \")\n",
+        "# tokenizer.push_to_hub(\"MattViana/GoBerta\", use_auth_token=\" ----- \")"
       ],
       "metadata": {
         "colab": {
